Show station markers on map, zoom to fit, and change from CDN to local scripts

--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,8 @@
 	</div>
 	
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj_B8fJmNw2_QFQMypsw_9dYXOe5wB13Q"></script>
-	<script src="https://unpkg.com/vue"></script>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="/vue.js"></script>
+	<script src="/axios.min.js"></script>
 	<script src="/markerclusterer.js"></script>
 	<script src="/app.js"></script>
 </body>
