--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,11 @@
 	<link rel="stylesheet" href="icon.min.css">
 	<link rel="stylesheet" href="rating.min.css">
 	<link rel="stylesheet" href="accordion.min.css">
+	<link rel="stylesheet" href="modal.min.css">
+	<link rel="stylesheet" href="transition.min.css">
+	<link rel="stylesheet" href="dimmer.min.css">
+	<link rel="stylesheet" href="checkbox.min.css">
 	<style>
-		#map{
-			height:100%
-		}
 		html,
 		body,
 		#app,
@@ -71,6 +72,20 @@
 		}
 	</style>
 </head>
+<!-- template for menu -->
+<script type="text/x-template" id="modal-template">
+	<transition name="modal">
+	  <div class="modal-mask">
+		<div class="modal-wrapper">
+		  <div class="modal-container">
+				<button class="modal-default-button" @click="$emit('close')">
+				  OK
+				</button>
+		  </div>
+		</div>
+	  </div>
+	</transition>
+  </script>
 
 <body>
 	<div id="app">
@@ -81,7 +96,10 @@
 				</div>
 		</div>
 		<a class="mobile tablet hidden" href="https://github.com/getbikesharedone/seagulltuna"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
-	</div>
+			<div id="map"></div>
+			<modal v-if="showModal" @close="showModal = false"></modal>
+			
+			</div>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj_B8fJmNw2_QFQMypsw_9dYXOe5wB13Q"></script>
 	<script src="/vue.js"></script>
@@ -91,8 +109,11 @@
 	<script src="/markerclusterer.js"></script>
 	<script src="/rating.min.js"></script>
 	<script src="/accordion.min.js"></script>
+	<script src="/modal.min.js"></script>
+	<script src="/transition.min.js"></script>
+	<script src="/dimmer.min.js"></script>
+	<script src="/checkbox.min.js"></script>
 	<script src="/app.js"></script>
-	
 </body>
 
 </html>
