--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
 			margin-left:30px;
 		}
 	</style>
+	<link rel="stylesheet" href="/checkbox.min.css">
 </head>
 <!-- template for menu -->
 <script type="text/x-template" id="modal-template">
@@ -83,6 +84,7 @@
 <body>
 	<div id="app">
 			
+				  
 		<div class="ui stackable grid">
 				<div class="ten wide column" id="map"></div>
 				<div class="six wide column" id="stations-list">
@@ -103,8 +105,7 @@
 	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 	crossorigin="anonymous"></script>
 	<script src="/markerclusterer.js"></script>
-	<script src="semantic/dist/semantic.min.js"></script>
+	<script src="/semantic/dist/semantic.min.js"></script>
 	<script src="/app.js"></script>
-</body>
 
 </html>
