--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
 		#app,
 		.ui.grid {
 			height: 100%;
-				margin: 0;
-				padding: 0;
+			margin: 0;
+			padding: 0;
 		}
 
 		#stations-list {
@@ -32,78 +32,82 @@
 			color: green
 		}
 
-		#stations-list > div > table > tbody > tr > td > div > div > span > i{
-			color:green
-		}
-		#stations-list > div > table > tbody > tr > td > div > div > span{
-			color:black
+		#stations-list>div>table>tbody>tr>td>div>div>span>i {
+			color: green
 		}
 
-		#stations-list > div > table > tbody > tr > td > div > div{
-			margin-left:10px;
-			margin-right:10px;
+		#stations-list>div>table>tbody>tr>td>div>div>span {
+			color: black
 		}
-		#stations-list > div > table > thead > tr > th > a > span{
-			color:black
+
+		#stations-list>div>table>tbody>tr>td>div>div {
+			margin-left: 10px;
+			margin-right: 10px;
+		}
+
+		#stations-list>div>table>thead>tr>th>a>span {
+			color: black
 		}
 	</style>
 	<link rel="stylesheet" href="/styles.css">
 	<style>
-		#stations-list > div > table > thead > tr > th > div > div{
+		#stations-list>div>table>thead>tr>th>div>div {
 			margin-left: 10px;
 			margin-right: 10px;
 		}
-		#stations-list > div > table > thead > tr > th > div > div:nth-child(3){
-			color:black
+
+		#stations-list>div>table>thead>tr>th>div>div:nth-child(3) {
+			color: black
 		}
-		#stations-list > div > table > tbody > tr > td > div > div > span > span{
-			color:darkorange
+
+		#stations-list>div>table>tbody>tr>td>div>div>span>span {
+			color: darkorange
 		}
-		#stations-list > div > div > table > thead > tr > th > div > div:nth-child(3){
-			color:black;
-			margin-left:30px;
+
+		#stations-list>div>div>table>thead>tr>th>div>div:nth-child(3) {
+			color: black;
+			margin-left: 30px;
 		}
+
 	</style>
 	<link rel="stylesheet" href="/checkbox.min.css">
 </head>
 <!-- template for menu -->
 <script type="text/x-template" id="modal-template">
 	<transition name="modal">
-	  <div class="modal-mask">
-		<div class="modal-wrapper">
-		  <div class="modal-container">
-				<button class="modal-default-button" @click="$emit('close')">
+		<div class="modal-mask">
+			<div class="modal-wrapper">
+				<div class="modal-container">
+					<button class="modal-default-button" @click="$emit('close')">
 				  OK
 				</button>
-		  </div>
+				</div>
+			</div>
 		</div>
-	  </div>
 	</transition>
-  </script>
+</script>
 
 <body>
 	<div id="app">
-			
-				  
+
+
 		<div class="ui stackable grid">
-				<div class="ten wide column" id="map"></div>
-				<div class="six wide column" id="stations-list">
-					<stations-list></stations-list>
-				</div>
+			<div class="ten wide column" id="map"></div>
+			<div class="six wide column" id="stations-list">
+				<stations-list></stations-list>
+			</div>
 		</div>
 		<a class="mobile tablet hidden" href="https://github.com/getbikesharedone/seagulltuna"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
-			<div id="map"></div>
-			<modal v-if="showModal" @close="showModal = false"></modal>
-			</div>
+		<div id="map"></div>
+		<modal v-if="showModal" @close="showModal = false"></modal>
+	</div>
 	</div>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj_B8fJmNw2_QFQMypsw_9dYXOe5wB13Q"></script>
 	<script src="/vue.js"></script>
 	<script src="/axios.min.js"></script>
-	<script
-	src="https://code.jquery.com/jquery-3.1.1.min.js"
-	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-	crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	 crossorigin="anonymous"></script>
 	<script src="/markerclusterer.js"></script>
 	<script src="/semantic/dist/semantic.min.js"></script>
 	<script src="/app.js"></script>
