Add add and show reviews in the stations list

--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
 
 <body>
 	<div id="app">
-
+			
 
 		<div class="ui stackable grid">
 			<div class="ten wide column" id="map"></div>
@@ -110,6 +110,11 @@
 	 crossorigin="anonymous"></script>
 	<script src="/markerclusterer.js"></script>
 	<script src="/semantic/dist/semantic.min.js"></script>
+	<script src="https://unpkg.com/vue-star-rating/dist/star-rating.min.js"></script>
 	<script src="/app.js"></script>
+	<script>$('.ui.modal')
+			.modal()
+			$('.ui.rating')
+			.rating()</script>
 
 </html>
