--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,7 @@
 			color: black;
 			margin-left: 30px;
 		}
+		.blackText{color:black}
 
 	</style>
 	<link rel="stylesheet" href="/checkbox.min.css">
