--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 	<meta charset="utf-8">
-	<title>Simple markers</title>
+	<title>Getterdone - Bikeshare</title>
 	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 	<style>
 		html,
